# skillwatch

./: .env.example  .gitignore  Justfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: skills_mapping.json  training_skills_mapping.json
docs/: agregation.md  audit_referentiel.html  merise_mcd.md  openapi.json  openapi.md  presentation.md  rgpd_procedures.md  rgpd_registre.md  sql_queries.md  summary_stackoverflow.md
sql/: demographics_dump.sql  schema_demographics.sql  schema_warehouse.sql  seed_skill_categories.sql
src/api/: main.py
src/api/core/: config.py  security.py
src/api/routes/: auth.py  jobs.py  market.py  skills.py  stats.py  trainings.py
src/api/schemas/: market.py  skills.py  trainings.py
src/api/services/: auth_service.py  market_service.py  skills_service.py  trainings_service.py
src/extract/: demographics.py  france_travail.py  openclassrooms.py  stackoverflow_latest.py  stackoverflow_spark.py
src/transform/: normalizer.py
src/utils/: db.py  logger.py
