[project]
name = "skillwatch"
version = "0.1.0"
description = "Observatoire du Marché de l'Emploi Data & IA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic-settings",
    "pyspark==3.5.0",
    "requests",
    "beautifulsoup4",
    "pandas",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
